--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "tailwind": "npx tailwindcss -i ./src/index.css -o ./public/index.css --watch",
+    "tailwind": "npx tailwindcss -i ./index.css -o ./src/index.css --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
