Added utility functions for handling user authentication

--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -15,6 +15,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.16",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.0",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
