Added components to handle dashboard route

--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.0",
