--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "tailwind": "npx tailwindcss -i ./index.css -o ./src/index.css --watch",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -16,6 +15,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
