--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,15 @@
 asgiref==3.7.2
+distlib==0.3.7
 Django==4.2.6
 django-cleanup==8.0.0
 django-cors-headers==4.3.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+filelock==3.12.2
 Pillow==10.1.0
+platformdirs==3.10.0
+PyJWT==2.8.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.3
+virtualenv==20.24.2
