--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-arborist": "^3.3.0-rc.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0"
   },
