--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
