--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -15,15 +15,18 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@types/react-router-dom": "^5.3.3",
+    "ace-builds": "^1.31.2",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-arborist": "^3.3.0-rc.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "split-pane-react": "^0.1.3"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
