Added webcontainers for viewing project output

--- a/websandbox/package.json
+++ b/websandbox/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@types/react-router-dom": "^5.3.3",
+    "@webcontainer/api": "^1.1.8",
     "ace-builds": "^1.31.2",
+    "async-mutex": "^0.4.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.0",
     "dayjs": "^1.11.10",
