--- a/websandbox/netlify.toml
+++ b/websandbox/netlify.toml
@@ -2,3 +2,9 @@
   from = "/*"
   to = "/"
   status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cross-Origin-Embedder-Policy = "require-corp"
+    Cross-Origin-Opener-Policy = "same-origin"
