--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,25 @@
 asgiref==3.7.2
+boto3==1.34.97
+botocore==1.34.97
 distlib==0.3.7
 Django==4.2.6
 django-cleanup==8.0.0
 django-cors-headers==4.3.0
+django-storages==1.14.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 filelock==3.12.2
+jmespath==1.0.1
 Pillow==10.1.0
 platformdirs==3.10.0
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2023.3.post1
+s3transfer==0.10.1
 setuptools==69.5.1
+six==1.16.0
 sqlparse==0.4.4
 tzdata==2023.3
+urllib3==2.2.1
 virtualenv==20.24.2
